--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">About Me</h2>
+										<p>Hi, I’m Marie Ament — a staff systems test engineer with a background in cybersecurity and a passion for smart, secure tech. I specialize in embedded systems, automation, and testing electric meter integrations. With hands-on experience in Python, Wireshark, and Selenium, I love solving complex problems and working across teams to deliver reliable solutions. Outside of tech, I enjoy hiking with my fiancé and dogs, snowboarding, and playing recreational sports.</p>
+										<a href="itzmarieee/marie.portfolio/Resume Marie Ament.pdf" target="_blank">Resume</a>
 									</div>
 								</div>
 							</section>
@@ -65,8 +65,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Project 1</h2>
+										<p>Description</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -77,8 +77,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Project 2</h2>
+										<p>Description</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
