--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Leaflet styles for map -->
+		<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -55,7 +57,7 @@
 									<div class="content">
 										<h2 class="major">About Me</h2>
 										<p>Hi, I’m Marie Ament — a staff systems test engineer with a background in cybersecurity and a passion for smart, secure tech. I specialize in embedded systems, automation, and testing electric meter integrations. With hands-on experience in Python, Wireshark, and Selenium, I love solving complex problems and working across teams to deliver reliable solutions. Outside of tech, I enjoy hiking with my fiancé and dogs, snowboarding, and playing recreational sports.</p>
-										<a href="itzmarieee/marie.portfolio/Resume Marie Ament.pdf" target="_blank">Resume</a>
+										<a href="Resume Marie Ament.pdf" target="_blank">Resume</a>
 									</div>
 								</div>
 							</section>
@@ -65,9 +67,10 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Project 1</h2>
-										<p>Description</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Live Threat Map</h2>
+										<p>See an interactive visualization of simulated global cybersecurity threats, built using Leaflet.js. This tool demonstrates how cyber attacks like SQL injection, brute force, and malware distribution might look in real time—perfect for showing off both frontend and security skills.</p>
+										<a href="threatMap/threatMap.html" class="button">View Live Threat Map</a>
+									</section>
 									</div>
 								</div>
 							</section>
