--- a/threatMap/threatMap.html
+++ b/threatMap/threatMap.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Live Threat Map</title>
-  <link rel="stylesheet" href="style.css"> <!-- Use your existing CSS -->
+  <link rel="stylesheet" href="assets/css/main.css"> 
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
@@ -17,7 +17,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Marie Ament</p>
+    <p>&copy; Marie Ament</p>
     <p><a href="index.html">← Back to Home</a></p>
   </footer>
 
@@ -29,7 +29,7 @@
     }).addTo(map);
   
     // Load threat data from threats.json
-    fetch('threats.json')
+    fetch('threatMap/threats.json')
       .then(response => response.json())
       .then(threats => {
         threats.forEach(t => {
