--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/ThreatLogo.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Live Threat Map</h2>
 										<p>See an interactive visualization of simulated global cybersecurity threats, built using Leaflet.js. This tool demonstrates how cyber attacks like SQL injection, brute force, and malware distribution might look in real time—perfect for showing off both frontend and security skills.</p>
