--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
   
-      fetch('https://your-backend-api.com/login', {
+      fetch('http://10.0.0.200:5000/login', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
@@ -19,9 +19,9 @@
       })
       .then(res => res.json())
       .then(data => {
-        if (data.success) {
+        if (data.status === 'success') {
           alert("Login success!");
-          window.location.href = "dashboard.html"; // or wherever
+          window.location.href = "dashboard.html";
         } else {
           alert("Login failed: " + data.message);
         }
