--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
     <input type="password" id="password" placeholder="Password" required />
     <button type="submit">Login</button>
   </form>
-  
+  <p>Don’t have an account? <a href="signup.html">Sign up here</a></p>
+
   <script>
     document.getElementById("loginForm").addEventListener("submit", function (e) {
       e.preventDefault();
